--- a/Workbook.ipynb
+++ b/Workbook.ipynb
@@ -17718,7 +17718,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -18126,7 +18128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18149,7 +18151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -18207,7 +18209,7 @@
        "kNeighbors         0.975606     0.959618      0.975804  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -18394,7 +18396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 28,
    "metadata": {
     "scrolled": false
    },
@@ -18467,7 +18469,7 @@
        "kNeighbors_std        0.952836         0.971742     0.953275      0.971984  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -18481,7 +18483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -18565,7 +18567,7 @@
        "kNeighbors_norm        0.948899         0.974927     0.949000      0.975123  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -18579,7 +18581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18599,8 +18601,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
+   "execution_count": 31,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
