--- a/Workbook.ipynb
+++ b/Workbook.ipynb
@@ -80,173 +80,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>T</th>\n",
-       "      <th>2</th>\n",
-       "      <th>8</th>\n",
-       "      <th>3</th>\n",
-       "      <th>5</th>\n",
-       "      <th>1</th>\n",
-       "      <th>8.1</th>\n",
-       "      <th>13</th>\n",
-       "      <th>0</th>\n",
-       "      <th>6</th>\n",
-       "      <th>6.1</th>\n",
-       "      <th>10</th>\n",
-       "      <th>8.2</th>\n",
-       "      <th>0.1</th>\n",
-       "      <th>8.3</th>\n",
-       "      <th>0.2</th>\n",
-       "      <th>8.4</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>I</td>\n",
-       "      <td>5</td>\n",
-       "      <td>12</td>\n",
-       "      <td>3</td>\n",
-       "      <td>7</td>\n",
-       "      <td>2</td>\n",
-       "      <td>10</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>4</td>\n",
-       "      <td>13</td>\n",
-       "      <td>3</td>\n",
-       "      <td>9</td>\n",
-       "      <td>2</td>\n",
-       "      <td>8</td>\n",
-       "      <td>4</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>D</td>\n",
-       "      <td>4</td>\n",
-       "      <td>11</td>\n",
-       "      <td>6</td>\n",
-       "      <td>8</td>\n",
-       "      <td>6</td>\n",
-       "      <td>10</td>\n",
-       "      <td>6</td>\n",
-       "      <td>2</td>\n",
-       "      <td>6</td>\n",
-       "      <td>10</td>\n",
-       "      <td>3</td>\n",
-       "      <td>7</td>\n",
-       "      <td>3</td>\n",
-       "      <td>7</td>\n",
-       "      <td>3</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>N</td>\n",
-       "      <td>7</td>\n",
-       "      <td>11</td>\n",
-       "      <td>6</td>\n",
-       "      <td>6</td>\n",
-       "      <td>3</td>\n",
-       "      <td>5</td>\n",
-       "      <td>9</td>\n",
-       "      <td>4</td>\n",
-       "      <td>6</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>10</td>\n",
-       "      <td>6</td>\n",
-       "      <td>10</td>\n",
-       "      <td>2</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>G</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>8</td>\n",
-       "      <td>6</td>\n",
-       "      <td>6</td>\n",
-       "      <td>6</td>\n",
-       "      <td>6</td>\n",
-       "      <td>5</td>\n",
-       "      <td>9</td>\n",
-       "      <td>1</td>\n",
-       "      <td>7</td>\n",
-       "      <td>5</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>S</td>\n",
-       "      <td>4</td>\n",
-       "      <td>11</td>\n",
-       "      <td>5</td>\n",
-       "      <td>8</td>\n",
-       "      <td>3</td>\n",
-       "      <td>8</td>\n",
-       "      <td>8</td>\n",
-       "      <td>6</td>\n",
-       "      <td>9</td>\n",
-       "      <td>5</td>\n",
-       "      <td>6</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>9</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   T  2   8  3  5  1  8.1  13  0  6  6.1  10  8.2  0.1  8.3  0.2  8.4\n",
-       "0  I  5  12  3  7  2   10   5  5  4   13   3    9    2    8    4   10\n",
-       "1  D  4  11  6  8  6   10   6  2  6   10   3    7    3    7    3    9\n",
-       "2  N  7  11  6  6  3    5   9  4  6    4   4   10    6   10    2    8\n",
-       "3  G  2   1  3  1  1    8   6  6  6    6   5    9    1    7    5   10\n",
-       "4  S  4  11  5  8  3    8   8  6  9    5   6    6    0    8    9    7"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-9be3cbd9922d>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-1-9be3cbd9922d>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    dataSet = pd.read_csv(\"data\\letter-recognition.data\" encoding= 'utf-8')\u001b[0m\n\u001b[1;37m                                                                ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
     "# Load data\n",
-    "dataSet = pd.read_csv(\"data\\letter-recognition.data\")\n",
+    "dataSet = pd.read_csv(\"data\\letter-recognition.data\" encoding= ‘utf-8')\n",
     "dataSet.head()"
    ]
   },
